--- a/extern_configuration/pom.xml
+++ b/extern_configuration/pom.xml
@@ -6,16 +6,24 @@
         <groupId>com.example</groupId>
         <artifactId>pratice</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+
     </parent>
-    <groupId>com.comfigurator</groupId>
-    <artifactId>configurator_file</artifactId>
+
+    <artifactId>extern_configuration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>configurator_file</name>
+    <name>extern_configuration</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
+
+    </dependencies>
 
     <build>
         <plugins>
