--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -7,15 +7,22 @@
         <artifactId>pratice</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>com.comfigurator</groupId>
-    <artifactId>configurator_file</artifactId>
+
+    <artifactId>inject</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>configurator_file</name>
+    <name>inject</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
 
+
+    </dependencies>
 
     <build>
         <plugins>
