--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 <artifactId>pratice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+	<packaging>pom</packaging>
 	<description>pratice for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -50,6 +50,8 @@
 	</dependencies>
 
 	<build>
+		<!--配置打包后的Jar包的名字 -->
+		<finalName>Site</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -101,5 +103,6 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
+
 
 </project>
